--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "adventofcode2019"
+name = "aoc"
 version = "0.1.0"
 authors = ["Caleb Everett <everett.caleb@gmail.com>"]
 edition = "2018"
@@ -8,3 +8,4 @@ edition = "2018"
 
 [dependencies]
 structopt = "0.2.10"
+futures = "0.3.1"
